--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,11 @@
 *.md
-.gitignore
-.idea/
-.run/
-docker/
-gradle/
-gradlew
-gradlew.bat
-local.properties
+/.gitignore
+/.gradle
+/.idea
+/.run
+/build
+/docker
+/gradle
+/gradlew
+/gradlew.bat
+/local.properties
